# MuffinGL

./: .gitignore  CMakeLists.txt  README.md  build.bat
demos/: alpha_mask.cpp  alpha_mask_shortcut.cpp  alpha_mask_w_texture_brush.cpp  alpha_no_prerender.cpp  failure_demo.cpp  layers_demo.cpp  log_tests.cpp  minimal_blend_demo.cpp  pan_and_zoom.cpp  prerender_alpha.cpp  texture_wrapping.cpp
docs/: api_reference.md  architecture.md  concept.md
docs/core_components/: graphics.md  textures.md
docs/developer_notes/: Alpha_compositing_OpenGL_blending_and_premultiplied_alpha.md  IMG_Load_and_alpha.md  SDL_CreateTextureFromSurface_alpha_preservation.md  SDL_SetTextureScaleMode_side_effects.md  architecture.md  blend_modes_part_2.md  concept.md  getPixel_solution.md  loading_alpha_textures.md  profiling_applyMask.md  solution_mask_texture.md  texture_scaling_known_issues.md  todo.md
include/muffinGL/: camera.hpp  graphics.hpp  layer.hpp  raster.hpp  texture.hpp  util.hpp
src/: camera.cpp  graphics.cpp  graphics.hpp  layer.cpp  layer.hpp  main.cpp  raster.cpp  raster.hpp  texture.cpp  texture.hpp
